Fixed alignment in values, events, members section✨

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,7 +149,7 @@ section {
 }
 
 .back-to-top:hover {
-  background: #6776f4;
+  background: #013289;
   color: #fff;
 }
 
@@ -257,7 +257,7 @@ section {
 
 .navbar .getstarted:hover {
   color: #fff;
-  background: #5969f3;
+  background: #013289;
 }
 
 .navbar .dropdown ul {
@@ -761,8 +761,8 @@ section {
 }
 
 .portfolio .portfolio-wrap img {
-  /* height: 180px;
-  width: 180px; */
+  /* height: auto;
+  width: 340px; */
   transition: 1s;
 }
 
@@ -852,9 +852,9 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Testimonials
+# podcasts
 --------------------------------------------------------------*/
-.testimonials .testimonial-item {
+.podcasts .podcast-item {
   box-sizing: content-box;
   padding: 20px;
   margin: 30px 20px;
@@ -868,7 +868,7 @@ section {
   transition: 0.2s;
 }
 
-.testimonials .testimonial-item .testimonial-img {
+.podcasts .podcast-item .podcast-img {
   align-items: center;
   border: 4px solid #fff;
   margin: 0 auto;
@@ -876,25 +876,25 @@ section {
   height: auto;
 }
 
-.testimonials .testimonial-item h3 {
+.podcasts .podcast-item h3 {
   font-size: 16px;
   font-weight: bold;
   margin: 10px 0 5px 0;
   color: #111;
 }
 
-.testimonials .testimonial-item h4 {
+.podcasts .podcast-item h4 {
   font-size: 12px;
   color: #999;
   margin: 0;
 }
 
-.testimonials .swiper-pagination {
+.podcasts .swiper-pagination {
   margin-top: 15px;
   position: relative;
 }
 
-.testimonials .swiper-pagination .swiper-pagination-bullet {
+.podcasts .swiper-pagination .swiper-pagination-bullet {
   width: 10px;
   height: 10px;
   background-color: #fff;
@@ -902,25 +902,25 @@ section {
   border: 1px solid crimson;
 }
 
-.testimonials .swiper-pagination .swiper-pagination-bullet-active {
+.podcasts .swiper-pagination .swiper-pagination-bullet-active {
   background-color: crimson;
 }
 
-.testimonials .swiper-slide {
+.podcasts .swiper-slide {
   opacity: 0.3;
 }
 
 @media (max-width: 1199px) {
-  .testimonials .swiper-slide-active {
+  .podcasts .swiper-slide-active {
     opacity: 1;
   }
-  .testimonials .swiper-pagination {
+  .podcasts .swiper-pagination {
     margin-top: 0;
   }
 }
 
 @media (min-width: 1200px) {
-  .testimonials .swiper-slide-next {
+  .podcasts .swiper-slide-next {
     opacity: 1;
     transform: scale(1.12);
   }
@@ -937,6 +937,7 @@ section {
 .team .member {
   overflow: hidden;
   text-align: center;
+  margin-top: 20px;
   border-radius: 5px;
   background: #fff;
   box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);
@@ -951,7 +952,9 @@ section {
 .team .member .member-img:after {
   position: absolute;
   content: "";
+  top: 0;
   left: 0;
+  right: 0;
   bottom: 0;
   height: 100%;
   width: 100%;
@@ -978,22 +981,9 @@ section {
   color: #aaaaaa;
 }
 
-/* .team .member .member-info p {
-  font-style: italic;
-  font-size: 14px;
-  padding-top: 15px;
-  line-height: 26px;
-  color: #5e5e5e;
-} */
-
 .team .member:hover {
-  transform: scale(1.08);
+  transform: scale(1.06);
   box-shadow: 0px 0 30px rgba(1, 41, 112, 0.1);
-}
-
-.team .member:hover .social {
-  right: 8px;
-  opacity: 1;
 }
 
 /*--------------------------------------------------------------
